--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,4 +35,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: executable
-          path: ./build/bin/asprite.exe
+          path: ./build/bin/aseprite.exe
+      - uses: actions/upload-artifcat@v4
+        with:
+          name: pdb
+          path: ./build/bin/aseprite.pdb
